--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,19 @@
 #
 #    pip-compile
 #
+click==8.1.3              # via flask
+flask==2.2.2              # via -r requirements.in
 gensim==4.2.0             # via -r requirements.in
+gunicorn==20.1.0          # via -r requirements.in
+importlib-metadata==4.12.0  # via flask
+itsdangerous==2.1.2       # via flask
+jinja2==3.1.2             # via flask
+markupsafe==2.1.1         # via jinja2, werkzeug
 numpy==1.23.1             # via gensim, scipy
 scipy==1.9.0              # via gensim
 smart-open==6.0.0         # via gensim
+werkzeug==2.2.2           # via flask
+zipp==3.8.1               # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
