--- a/gateway/default.conf
+++ b/gateway/default.conf
@@ -3,9 +3,9 @@ server {
   root /www/data;
   include /etc/nginx/mime.types;
 
-  # location / {
-  #   proxy_pass http://with_ai_frontend:80;
-  # }
+  location / {
+    proxy_pass http://with_ai_frontend:80;
+  }
 
   location /api {
     proxy_pass http://with_ai_api:8080;
