Fix guessing a bit
Also fix python style things

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     mypy
 commands =
     mypy --check-untyped-defs --warn-unused-ignores --no-incremental \
-    wiki_reveal tests
+    with_ai tests
 
 [testenv:lint]
 basepython = python3.9
