--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@
 #    pip-compile
 #
 click==8.1.3              # via flask
-flask==2.2.2              # via -r requirements.in
+flask-cors==3.0.10        # via -r requirements.in
+flask==2.2.2              # via -r requirements.in, flask-cors
 gensim==4.2.0             # via -r requirements.in
 gunicorn==20.1.0          # via -r requirements.in
 importlib-metadata==4.12.0  # via flask
@@ -14,6 +15,7 @@ jinja2==3.1.2             # via flask
 markupsafe==2.1.1         # via jinja2, werkzeug
 numpy==1.23.1             # via gensim, scipy
 scipy==1.9.0              # via gensim
+six==1.16.0               # via flask-cors
 smart-open==6.0.0         # via gensim
 werkzeug==2.2.2           # via flask
 zipp==3.8.1               # via importlib-metadata
